Codex review done