@@ -2,63 +2,47 @@ package com.example.SpringApi.Services.Tests.PurchaseOrder;
 
 import com.example.SpringApi.Controllers.PurchaseOrderController;
 import com.example.SpringApi.ErrorMessages;
-import com.example.SpringApi.Exceptions.UnauthorizedException;
 import com.example.SpringApi.Helpers.ImgbbHelper;
 import com.example.SpringApi.Models.Authorizations;
 import com.example.SpringApi.Models.DatabaseModels.OrderSummary;
 import com.example.SpringApi.Models.DatabaseModels.PurchaseOrder;
 import com.example.SpringApi.Models.DatabaseModels.Resources;
-import com.example.SpringApi.Models.DatabaseModels.Shipment;
-import com.example.SpringApi.Models.DatabaseModels.ShipmentPackage;
 import com.example.SpringApi.Models.RequestModels.PurchaseOrderRequestModel;
-import com.example.SpringApi.Services.PurchaseOrderService;
 import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.DynamicTest;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.TestFactory;
 import org.mockito.MockedConstruction;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 
 import java.lang.reflect.Method;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.atLeastOnce;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.lenient;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.mockConstruction;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 /**
  * Test class for PurchaseOrderService.updatePurchaseOrder method.
  *
- * Test count: 7 tests
+ * Test count: 6 tests
  * - SUCCESS: 1 test
- * - FAILURE / EXCEPTION: 3 tests
+ * - FAILURE / EXCEPTION: 2 tests
  * - PERMISSION: 3 tests
  */
 @DisplayName("PurchaseOrderService - UpdatePurchaseOrder Tests")
 public class UpdatePurchaseOrderTest extends PurchaseOrderServiceTestBase {
-    // Total Tests: 7
+    // Total Tests: 6
 
     /*
      **********************************************************************************************
@@ -74,7 +58,7 @@ public class UpdatePurchaseOrderTest extends PurchaseOrderServiceTestBase {
     @Test
     @DisplayName("Update PO - Success With Attachments")
     void updatePurchaseOrder_WithAttachments_Success() {
-        // ARRANGE
+        // Arrange
         Map<String, String> attachments = new HashMap<>();
         attachments.put("invoice.pdf", "base64-data");
         testPurchaseOrderRequest.setAttachments(attachments);
@@ -82,47 +66,30 @@ public class UpdatePurchaseOrderTest extends PurchaseOrderServiceTestBase {
         Resources existingResource = new Resources();
         existingResource.setResourceId(200L);
         existingResource.setDeleteHashValue("hash-to-delete");
-        stubResourcesRepositoryFindByEntityIdAndEntityType(Arrays.asList(existingResource));
+        stubResourcesRepositoryFindByEntityIdAndEntityType(List.of(existingResource));
         stubPurchaseOrderRepositoryFindById(Optional.of(testPurchaseOrder));
         stubClientRepositoryFindById(Optional.of(testClient));
+        stubAddressRepositoryFindExactDuplicate(Optional.empty());
+        stubAddressRepositorySave(testAddress);
+        stubPurchaseOrderRepositorySave(testPurchaseOrder);
+        stubOrderSummaryRepositorySave(testOrderSummary);
+        stubShipmentRepositorySaveAssigningId(1L);
+        stubShipmentProductRepositorySaveAll();
+        stubShipmentPackageRepositorySaveAssigningId(1L);
+        stubShipmentPackageProductRepositorySaveAll();
+        stubResourcesRepositorySave(new Resources());
 
-        lenient().when(addressRepository.findExactDuplicate(any(), any(), any(), any(), any(), any(), any(), any(), any(), any(),
-                any(), any(), any(), any(), any())).thenReturn(Optional.empty());
-        lenient().when(addressRepository.save(any(com.example.SpringApi.Models.DatabaseModels.Address.class))).thenReturn(testAddress);
-        lenient().when(purchaseOrderRepository.save(any(PurchaseOrder.class))).thenReturn(testPurchaseOrder);
-        lenient().when(orderSummaryRepository.save(any(OrderSummary.class))).thenReturn(testOrderSummary);
-        AtomicLong shipmentIdSeq = new AtomicLong(1L);
-        lenient().when(shipmentRepository.save(any(Shipment.class))).thenAnswer(invocation -> {
-            Shipment s = invocation.getArgument(0);
-            s.setShipmentId(shipmentIdSeq.getAndIncrement());
-            return s;
-        });
-        lenient().when(shipmentProductRepository.saveAll(anyList())).thenAnswer(invocation -> invocation.getArgument(0));
-        AtomicLong shipmentPackageIdSeq = new AtomicLong(1L);
-        lenient().when(shipmentPackageRepository.save(any(ShipmentPackage.class))).thenAnswer(invocation -> {
-            ShipmentPackage p = invocation.getArgument(0);
-            p.setShipmentPackageId(shipmentPackageIdSeq.getAndIncrement());
-            return p;
-        });
-        lenient().when(shipmentPackageProductRepository.saveAll(anyList())).thenAnswer(invocation -> invocation.getArgument(0));
-        lenient().when(resourcesRepository.save(any(Resources.class))).thenReturn(new Resources());
+        List<ImgbbHelper.AttachmentUploadResult> results = List.of(
+                new ImgbbHelper.AttachmentUploadResult(
+                        "https://i.ibb.co/test/invoice.pdf",
+                        "delete-hash-456",
+                        null));
 
-        try (MockedConstruction<ImgbbHelper> imgbbHelperMock = mockConstruction(ImgbbHelper.class,
-                (mock, context) -> {
-                    List<ImgbbHelper.AttachmentUploadResult> results = Arrays.asList(
-                            new ImgbbHelper.AttachmentUploadResult(
-                                    "https://i.ibb.co/test/invoice.pdf",
-                                    "delete-hash-456",
-                                    null));
-                    lenient().when(mock.uploadPurchaseOrderAttachments(anyList(), anyString(), anyString(), anyLong()))
-                            .thenReturn(results);
-                    lenient().when(mock.deleteMultipleImages(anyList())).thenReturn(1);
-                })) {
-
-            // ACT
+        try (MockedConstruction<ImgbbHelper> ignored = stubImgbbHelperUploadResultsWithDelete(results, 1)) {
+            // Act
             assertDoesNotThrow(() -> purchaseOrderService.updatePurchaseOrder(testPurchaseOrderRequest));
 
-            // ASSERT
+            // Assert
             verify(purchaseOrderRepository, atLeastOnce()).save(any(PurchaseOrder.class));
             verify(orderSummaryRepository, atLeastOnce()).save(any(OrderSummary.class));
             verify(userLogService, times(1)).logData(anyLong(), anyString(), anyString());
@@ -136,30 +103,14 @@ public class UpdatePurchaseOrderTest extends PurchaseOrderServiceTestBase {
      */
 
     /**
-     * Purpose: Verify not found is thrown for missing ID.
-     * Expected Result: NotFoundException is thrown.
-     * Assertions: Exception message matches InvalidId.
-     */
-    @Test
-    @DisplayName("Update PO - Not Found")
-    void updatePurchaseOrder_NotFound() {
-        // ARRANGE
-        stubPurchaseOrderRepositoryFindById(Optional.empty());
-
-        // ACT & ASSERT
-        assertThrowsNotFound(ErrorMessages.PurchaseOrderErrorMessages.InvalidId,
-                () -> purchaseOrderService.updatePurchaseOrder(testPurchaseOrderRequest));
-    }
-
-    /**
      * Purpose: Verify client missing during attachment cleanup is rejected.
      * Expected Result: NotFoundException is thrown.
      * Assertions: Exception message matches InvalidId.
      */
     @Test
     @DisplayName("Update PO - Client Missing For Attachment Cleanup")
-    void updatePurchaseOrder_ClientMissingForCleanup() {
-        // ARRANGE
+    void updatePurchaseOrder_ClientMissingForCleanup_Success() {
+        // Arrange
         Map<String, String> attachments = new HashMap<>();
         attachments.put("doc.pdf", "base64-data");
         testPurchaseOrderRequest.setAttachments(attachments);
@@ -167,32 +118,35 @@ public class UpdatePurchaseOrderTest extends PurchaseOrderServiceTestBase {
         Resources existingResource = new Resources();
         existingResource.setResourceId(200L);
         existingResource.setDeleteHashValue("hash-to-delete");
-        stubResourcesRepositoryFindByEntityIdAndEntityType(Arrays.asList(existingResource));
+        stubResourcesRepositoryFindByEntityIdAndEntityType(List.of(existingResource));
         stubPurchaseOrderRepositoryFindById(Optional.of(testPurchaseOrder));
         stubClientRepositoryFindById(Optional.empty());
 
-        // ACT & ASSERT
+        // Act & Assert
         assertThrowsNotFound(ErrorMessages.ClientErrorMessages.InvalidId,
                 () -> purchaseOrderService.updatePurchaseOrder(testPurchaseOrderRequest));
     }
 
     /**
-     * Purpose: Update PO with various invalid ID scenarios.
-     * Expected Result: Throws NotFoundException with Invalid purchase order Id. message.
-     * Assertions: Correct exception message.
+     * Purpose: Verify not found is thrown for missing ID.
+     * Expected Result: NotFoundException is thrown.
+     * Assertions: Exception message matches InvalidId.
      */
-    @TestFactory
-    @DisplayName("Update PO - Invalid ID variations")
-    Stream<DynamicTest> updatePurchaseOrder_InvalidIds() {
-        return Stream.of(0L, -1L, -100L, Long.MAX_VALUE, Long.MIN_VALUE)
-                .map(id -> DynamicTest.dynamicTest("ID=" + id, () -> {
-                    initializeTestData();
-                    lenient().when(purchaseOrderRepository.findByPurchaseOrderIdAndClientId(eq(id), anyLong()))
-                            .thenReturn(Optional.empty());
+    @Test
+    @DisplayName("Update PO - Not Found")
+    void updatePurchaseOrder_NotFound_Failure() {
+        // Arrange
+        List<Long> invalidIds = List.of(0L, -1L, -100L, Long.MAX_VALUE, Long.MIN_VALUE);
 
-                    assertThrowsNotFound(ErrorMessages.PurchaseOrderErrorMessages.InvalidId,
-                            () -> purchaseOrderService.updatePurchaseOrder(testPurchaseOrderRequest));
-                }));
+        // Act & Assert
+        for (Long id : invalidIds) {
+            initializeTestData();
+            testPurchaseOrderRequest.setPurchaseOrderId(id);
+            stubPurchaseOrderRepositoryFindById(Optional.empty());
+
+            assertThrowsNotFound(ErrorMessages.PurchaseOrderErrorMessages.InvalidId,
+                    () -> purchaseOrderService.updatePurchaseOrder(testPurchaseOrderRequest));
+        }
     }
 
     /*
@@ -209,29 +163,32 @@ public class UpdatePurchaseOrderTest extends PurchaseOrderServiceTestBase {
     @Test
     @DisplayName("updatePurchaseOrder - Controller Permission - Unauthorized")
     void updatePurchaseOrder_controller_permission_unauthorized() {
-        // ARRANGE
-        PurchaseOrderService mockService = mock(PurchaseOrderService.class);
-        PurchaseOrderController controller = new PurchaseOrderController(mockService);
-        doThrow(new UnauthorizedException(ErrorMessages.ERROR_UNAUTHORIZED))
-                .when(mockService).updatePurchaseOrder(any(PurchaseOrderRequestModel.class));
+        // Arrange
+        PurchaseOrderController controller = new PurchaseOrderController(purchaseOrderServiceMock);
+        stubPurchaseOrderServiceThrowsUnauthorizedOnUpdate();
 
-        // ACT
+        // Act
         ResponseEntity<?> response = controller.updatePurchaseOrder(testPurchaseOrderRequest);
 
-        // ASSERT
+        // Assert
         assertEquals(HttpStatus.UNAUTHORIZED, response.getStatusCode());
     }
 
+    /**
+     * Purpose: Verify controller has @PreAuthorize for updatePurchaseOrder.
+     * Expected Result: Annotation exists and includes UPDATE_PURCHASE_ORDERS_PERMISSION.
+     * Assertions: Annotation is present and contains permission.
+     */
     @Test
     @DisplayName("updatePurchaseOrder - Verify @PreAuthorize Annotation")
-    void updatePurchaseOrder_VerifyPreAuthorizeAnnotation() throws NoSuchMethodException {
-        // ARRANGE
+    void updatePurchaseOrder_VerifyPreAuthorizeAnnotation_Success() throws NoSuchMethodException {
+        // Arrange
         Method method = PurchaseOrderController.class.getMethod("updatePurchaseOrder", PurchaseOrderRequestModel.class);
 
-        // ACT
+        // Act
         PreAuthorize annotation = method.getAnnotation(PreAuthorize.class);
 
-        // ASSERT
+        // Assert
         assertNotNull(annotation, "@PreAuthorize annotation should be present on updatePurchaseOrder");
         assertTrue(annotation.value().contains(Authorizations.UPDATE_PURCHASE_ORDERS_PERMISSION),
                 "@PreAuthorize should reference UPDATE_PURCHASE_ORDERS_PERMISSION");
@@ -245,16 +202,15 @@ public class UpdatePurchaseOrderTest extends PurchaseOrderServiceTestBase {
     @Test
     @DisplayName("updatePurchaseOrder - Controller delegates to service")
     void updatePurchaseOrder_WithValidRequest_DelegatesToService() {
-        // ARRANGE
-        PurchaseOrderService mockService = mock(PurchaseOrderService.class);
-        PurchaseOrderController controller = new PurchaseOrderController(mockService);
-        doNothing().when(mockService).updatePurchaseOrder(testPurchaseOrderRequest);
+        // Arrange
+        PurchaseOrderController controller = new PurchaseOrderController(purchaseOrderServiceMock);
+        stubPurchaseOrderServiceUpdateDoNothing();
 
-        // ACT
+        // Act
         ResponseEntity<?> response = controller.updatePurchaseOrder(testPurchaseOrderRequest);
 
-        // ASSERT
-        verify(mockService).updatePurchaseOrder(testPurchaseOrderRequest);
+        // Assert
+        verify(purchaseOrderServiceMock).updatePurchaseOrder(testPurchaseOrderRequest);
         assertEquals(HttpStatus.OK, response.getStatusCode());
     }
 }
